Kazachstan: test fixtur

--- a/data/kazachstan.yml
+++ b/data/kazachstan.yml
@@ -1,2 +1,8 @@
-## YAML Template.
----
+#
+# Klasa: Kazachstan
+# rzeki
+#
+
+- { name: "Uba", depth: 1234 }
+- { name: "Lepsy", depth: 9876 }
+- { name: "Nura", depth: 3434 }
