--- a/data/etiopia.yml
+++ b/data/etiopia.yml
@@ -1,3 +1,3 @@
-- { name: "The Nile", length: 1234 }
-- { name: "The Thames", length: 5678 }
-- { name: "Mississipi", length: 987 }
+- { name: "The Nile", depth: 1234 }
+- { name: "The Thames", depth: 5678 }
+- { name: "Mississipi", depth: 987 }
