--- a/data/rivers.yml
+++ b/data/rivers.yml
@@ -1,3 +1,3 @@
-﻿{ name: "Wisla", length: 1234 }
-{ name: "Warta", length: 9876 } 
-{ name: "Odra", length: 3434 }
+ { name: "Wisla", depth: 1234 }
+ { name: "Warta", depth: 9876 }
+ { name: "Odra", depth: 3434 }
